Add CLIENT command handler
Implemented a new CLIENT command handler and associated subcommands. This feature supports CLIENT commands with internal and external server handling and adds necessary protocols and message types.